change(vitepress): changing the vitepress path
